--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
@@ -14,16 +18,19 @@
     "@mui/icons-material": "^7.2.0",
     "@mui/material": "^7.2.0",
     "@prisma/client": "^6.12.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "graphql-yoga": "^5.15.1",
     "next": "15.4.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "prisma": "^6.12.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
